Add Prisma database, migrations, and user preferences API

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,13 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.local
+.env.*.local
+.env.*.production
+.env.*.development
+.env.*.test
 
 # vercel
 .vercel
@@ -39,3 +44,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# prisma generated (daca exista in proiectul tau)
+# de obicei Prisma Client e in node_modules, dar pastram si astea daca apar
+/app/generated/prisma
