--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NEXT_DISABLE_TURBOPACK=1 next build",
+    "build": "prisma generate && cross-env NEXT_DISABLE_TURBOPACK=1 next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "eslint"
   },
