--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.1",
+    "bcrypt": "^6.0.0",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
     "openai": "^6.15.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
